исправление текстовых стрингов

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">kotlinlesson2</string>
+    <string name="error">Send the link first!</string>
 </resources>
